--- a/app/src/main/res/layout/app_settings.xml
+++ b/app/src/main/res/layout/app_settings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -14,13 +14,16 @@
             android:id="@+id/app_icon"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_alignParentRight="true" />
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:contentDescription="@null" />
 
         <TextView
             android:id="@+id/app_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@id/app_icon"
+            android:layout_toStartOf="@id/app_icon"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <TextView
@@ -29,6 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/app_label"
             android:layout_toLeftOf="@id/app_icon"
+            android:layout_toStartOf="@id/app_icon"
             android:textColor="#0099CC" />
     </RelativeLayout>
 
@@ -60,7 +64,9 @@
                     android:layout_weight="1"
                     android:ems="3"
                     android:imeOptions="actionDone|flagNavigateNext"
-                    android:inputType="number" >
+                    android:inputType="number"
+                    android:importantForAutofill="no"
+                    tools:ignore="LabelFor" >
                 </EditText>
 
                 <TextView
@@ -76,7 +82,9 @@
                     android:layout_weight="1"
                     android:ems="3"
                     android:imeOptions="actionDone|flagNavigateNext"
-                    android:inputType="number" >
+                    android:inputType="number"
+                    android:importantForAutofill="no"
+                    tools:ignore="LabelFor" >
                 </EditText>
 
                 <Button
@@ -333,5 +341,4 @@
                 android:text="@string/settings_permissions" />
         </LinearLayout>
     </ScrollView>
-
 </LinearLayout>
