--- a/app/src/main/res/layout/app_list_item.xml
+++ b/app/src/main/res/layout/app_list_item.xml
@@ -22,6 +22,7 @@
             android:id="@+id/app_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white_gray"
             android:gravity="start" />
 
         <TextView
@@ -29,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="start"
-            android:textColor="#0099CC" />
+            android:textColor="@color/blue" />
     </LinearLayout>
 
 </LinearLayout>
