--- a/app/src/main/res/layout/filter_item.xml
+++ b/app/src/main/res/layout/filter_item.xml
@@ -9,7 +9,7 @@
         android:id="@+id/txtFilterName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#ff404040" >
+        android:background="@color/gray" >
     </TextView>
 
     <RadioGroup
