--- a/app/src/main/res/layout/permissions_dialog.xml
+++ b/app/src/main/res/layout/permissions_dialog.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:padding="10dp" >
 
-    <Switch
+    <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/swtRevokePerms"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
