--- a/app/src/main/res/menu-land/menu_main.xml
+++ b/app/src/main/res/menu-land/menu_main.xml
@@ -14,10 +14,10 @@
         android:id="@+id/menu_refresh"
         android:icon="@drawable/ic_main_refresh"
         android:title="@string/menu_refresh"
-        app:showAsAction="withText" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menu_recents"
         android:icon="@drawable/ic_main_recent"
         android:title="@string/menu_recents"
-        app:showAsAction="withText" />
+        app:showAsAction="ifRoom" />
 </menu>
