--- a/app/src/main/res/layout/app_settings.xml
+++ b/app/src/main/res/layout/app_settings.xml
@@ -199,11 +199,10 @@
                     android:text="@string/settings_screenon" />
 
                 <CheckBox
-                    android:id="@+id/chkAllowOnLockscreen"
+                    android:id="@+id/chkAutoHide"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:text="@string/settings_showwhenlocked" />
+                    android:text="@string/settings_autofullscreen" />
             </LinearLayout>
 
             <LinearLayout
@@ -218,10 +217,11 @@
                     android:text="@string/settings_resident" />
 
                 <CheckBox
-                    android:id="@+id/chkNoFullscreenIME"
+                    android:id="@+id/chkAllowOnLockscreen"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/settings_nofullscreenime" />
+                    android:singleLine="true"
+                    android:text="@string/settings_showwhenlocked" />
             </LinearLayout>
 
             <LinearLayout
@@ -345,6 +345,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_recent_tasks" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <CheckBox
+                    android:id="@+id/chkNoFullscreenIME"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings_nofullscreenime" />
             </LinearLayout>
 
             <Button
