--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -14,7 +14,7 @@
             android:id="@+id/about_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
+            android:textColor="?attr/about"
             android:text="@string/app_about"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="16dp"
-            android:textColor="@color/white"
+            android:textColor="?attr/about"
             android:text="@string/app_description" />
 
         <TextView
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="20dp"
-            android:textColor="@color/white"
+            android:textColor="?attr/about"
             android:text="@string/app_version" />
 
         <TextView
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="8dp"
-            android:textColor="@color/white"
+            android:textColor="?attr/about"
             android:text="@string/app_translation" />
     </LinearLayout>
 
