--- a/app/src/main/res/layout/app_permission_item.xml
+++ b/app/src/main/res/layout/app_permission_item.xml
@@ -14,6 +14,6 @@
         android:id="@+id/perm_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/blue" />
+        android:textColor="?attr/package_name" />
 
 </LinearLayout>
