--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/dark_blue_gray"
+    android:background="?attr/drawer_header"
     android:gravity="bottom"
     android:orientation="horizontal"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -21,7 +21,7 @@
     <TextView
         android:textSize="19sp"
         android:textStyle="bold"
-        android:textColor="@color/white"
+        android:textColor="@color/nav_header_main_text"
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
