--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="blue_gray">#263238</color>
-    <color name="dark_blue_gray">#161c20</color>
-    <color name="light_blue">#2196f3</color>
-    <color name="blue">#0099cc</color>
-    <color name="gray">#404040</color>
-    <color name="white">#ffffff</color>
-    <color name="white_gray">#fafafa</color>
-    <color name="transparent_white">#80ffffff</color>
-    <color name="black_gray">#262626</color>
+    <color name="control_text">#2196f3</color>
+    <color name="nav_header_main_text">#ffffff</color>
+    <color name="ic_vector">#ffffff</color>
+    <color name="filter_item">#191919</color>
+    <color name="filter_item_text">#ffffff</color>
+
+    <!-- Light Theme -->
+    <color name="navigation">#3f51b5</color>
+    <color name="status_bar">#324090</color>
+    <color name="options_menu">#ffffff</color>
+    <color name="options_menu_item">#000000</color>
+    <color name="snackbar_background">#ffffff</color>
+    <color name="snackbar_text">#000000</color>
+    <color name="about">#000000</color>
+    <color name="drawer_background">#ffffff</color>
+    <color name="drawer_header">#324090</color>
+    <color name="package_name">#0033cc</color>
+    <color name="app_settings">#000000</color>
+    <color name="app_list_item">#000000</color>
+    <color name="dialog_background">#ffffff</color>
+    <color name="dialog_text">#000000</color>
+    <color name="permission_desc">#0033cc</color>
+    <color name="spinner">#ffffff</color>
+
+    <!-- Dark Theme -->
+    <color name="navigation_dark">#161c20</color>
+    <color name="status_bar_dark">#161c20</color>
+    <color name="options_menu_dark">#161c20</color>
+    <color name="snackbar_background_dark">#263238</color>
+    <color name="snackbar_text_dark">#ffffff</color>
+    <color name="toolbar_dark">#263238</color>
+    <color name="background_dark">#262626</color>
+    <color name="about_dark">#ffffff</color>
+    <color name="drawer_background_dark">#263238</color>
+    <color name="drawer_header_dark">#161c20</color>
+    <color name="package_name_dark">#0099cc</color>
+    <color name="app_settings_dark">#ffffff</color>
+    <color name="app_list_item_dark">#fafafa</color>
+    <color name="dialog_background_dark">#263238</color>
+    <color name="dialog_text_dark">#ffffff</color>
+    <color name="dialog_state_dark">#80ffffff</color>
+    <color name="permission_desc_dark">#0099cc</color>
+    <color name="spinner_dark">#263238</color>
 </resources>
