--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,7 +9,7 @@
         android:icon="@drawable/ic_main_search"
         android:title="@string/menu_search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
-        app:showAsAction="always|collapseActionView" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/menu_refresh"
         android:icon="@drawable/ic_main_refresh"
