--- a/app/src/main/res/layout/app_list_item.xml
+++ b/app/src/main/res/layout/app_list_item.xml
@@ -22,7 +22,7 @@
             android:id="@+id/app_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="?attr/app_list_item"
+            android:textColor="@color/app_list_item"
             android:gravity="start" />
 
         <TextView
@@ -30,7 +30,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="start"
-            android:textColor="?attr/package_name" />
+            android:textColor="@color/package_name" />
     </LinearLayout>
-
 </LinearLayout>
