--- a/app/src/main/res/layout/app_settings_activity.xml
+++ b/app/src/main/res/layout/app_settings_activity.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/appToolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <include layout="@layout/toolbar"/>
-    </com.google.android.material.appbar.AppBarLayout>
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:theme="@style/Theme.Main.Toolbar"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -36,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/app_label"
             android:layout_toStartOf="@id/app_icon"
-            android:textColor="?attr/package_name" />
+            android:textColor="@color/package_name" />
     </RelativeLayout>
 
     <ScrollView
@@ -57,7 +59,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="?attr/app_settings"
+                    android:textColor="@color/day_night_text"
                     android:text="@string/settings_dpi" >
                 </TextView>
 
@@ -76,7 +78,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="?attr/app_settings"
+                    android:textColor="@color/day_night_text"
                     android:text="@string/settings_fontscale" >
                 </TextView>
 
@@ -108,12 +110,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:textColor="?attr/app_settings"
+                    android:textColor="@color/day_night_text"
                     android:text="@string/settings_screenshot" />
 
                 <Spinner
                     android:id="@+id/spnScreenshot"
-                    android:popupBackground="?attr/spinner"
+                    android:popupBackground="@color/spinner"
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
@@ -127,13 +129,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="?attr/app_settings"
+                    android:textColor="@color/day_night_text"
                     android:text="@string/settings_screen" >
                 </TextView>
 
                 <Spinner
                     android:id="@+id/spnScreen"
-                    android:popupBackground="?attr/spinner"
+                    android:popupBackground="@color/spinner"
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
@@ -154,12 +156,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:textColor="?attr/app_settings"
+                    android:textColor="@color/day_night_text"
                     android:text="@string/settings_locale" />
 
                 <Spinner
                     android:id="@+id/spnLocale"
-                    android:popupBackground="?attr/spinner"
+                    android:popupBackground="@color/spinner"
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
@@ -180,12 +182,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:textColor="?attr/app_settings"
+                    android:textColor="@color/day_night_text"
                     android:text="@string/settings_fullscreen" />
 
                 <Spinner
                     android:id="@+id/spnFullscreen"
-                    android:popupBackground="?attr/spinner"
+                    android:popupBackground="@color/spinner"
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
@@ -243,12 +245,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:textColor="?attr/app_settings"
+                    android:textColor="@color/day_night_text"
                     android:text="@string/settings_orientation" />
 
                 <Spinner
                     android:id="@+id/spnOrientation"
-                    android:popupBackground="?attr/spinner"
+                    android:popupBackground="@color/spinner"
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
@@ -264,13 +266,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_insistentnotif" />
-
-                <CheckBox
-                    android:id="@+id/chkNoBigNotifications"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:text="@string/settings_nobignotif" />
             </LinearLayout>
 
             <LinearLayout
@@ -282,33 +277,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:textColor="?attr/app_settings"
+                    android:textColor="@color/day_night_text"
                     android:text="@string/settings_ongoingnotif" />
 
                 <Spinner
                     android:id="@+id/spnOngoingNotifications"
-                    android:popupBackground="?attr/spinner"
-                    android:layout_width="0dip"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/viewNotifPriority"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:textColor="?attr/app_settings"
-                    android:text="@string/settings_notifpriority" />
-
-                <Spinner
-                    android:id="@+id/spnNotifPriority"
-                    android:popupBackground="?attr/spinner"
+                    android:popupBackground="@color/spinner"
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
@@ -322,12 +296,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:textColor="?attr/app_settings"
+                    android:textColor="@color/day_night_text"
                     android:text="@string/settings_recents_mode" />
 
                 <Spinner
                     android:id="@+id/spnRecentsMode"
-                    android:popupBackground="?attr/spinner"
+                    android:popupBackground="@color/spinner"
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
