--- a/app/src/main/res/layout/filter_dialog.xml
+++ b/app/src/main/res/layout/filter_dialog.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-            <ru.bluecat.android.xposed.mods.appsettings.FilterItemComponent
+            <ru.bluecat.android.xposed.mods.appsettings.ui.FilterItemComponent
                 android:id="@+id/fltAppType"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -26,7 +26,7 @@
                 app:overridden_label="@string/filter_user"
                 app:unchanged_label="@string/filter_system" />
 
-            <ru.bluecat.android.xposed.mods.appsettings.FilterItemComponent
+            <ru.bluecat.android.xposed.mods.appsettings.ui.FilterItemComponent
                 android:id="@+id/fltAppState"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -34,7 +34,7 @@
                 app:overridden_label="@string/filter_enabled"
                 app:unchanged_label="@string/filter_disabled" />
 
-            <ru.bluecat.android.xposed.mods.appsettings.FilterItemComponent
+            <ru.bluecat.android.xposed.mods.appsettings.ui.FilterItemComponent
                 android:id="@+id/fltActive"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
