--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="activity_horizontal_margin">16dip</dimen>
-    <dimen name="activity_vertical_margin">16dip</dimen>
-    <dimen name="nav_header_vertical_spacing">20dip</dimen>
+    <dimen name="nav_header_text_size">19sp</dimen>
+    <dimen name="nav_header_image_size">55dp</dimen>
+    <dimen name="nav_header_vertical_spacing">15dp</dimen>
+    <dimen name="nav_header_horizontal_spacing">10dp</dimen>
 </resources>
